add getUserProfile operation and fix photo and comment author
